--- a/.github/workflows/build-mac-linux-windows.yml
+++ b/.github/workflows/build-mac-linux-windows.yml
@@ -17,13 +17,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        os: [ windows-latest]
       
     runs-on: ${{ matrix.os }}
     
     steps:
       # Check-out repository
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Setup Python
         uses: actions/setup-python@v4
@@ -49,7 +49,7 @@ jobs:
           
       # Uploads artifacts
       - name: "Upload Artifacts"
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ runner.os }} Build
           path: |
